# repo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/management/commands/: bootstrap_user.py
extension/: README.md  manifest.json  popup.html  popup.js
ingestion/: clip.py  images.py  net.py  tasks.py
ingestion/ai/: __init__.py  client.py
ingestion/browser/: x_scraper.py
ingestion/management/commands/: capture_x_session.py
ingestion/parsers/: __init__.py  article.py  base.py  image.py  registry.py  x.py  youtube.py
ingestion/tests/: test_ai.py  test_clip.py  test_images.py  test_net.py  test_registry.py  test_tasks.py  test_x_parser.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_note_search_vector_note_note_search_gin.py
notes/templates/notes/: _add_form.html  _card.html  _deleted.html  dashboard.html  detail.html
notes/tests/: test_forms_and_edit.py  test_search.py  test_views.py
static/css/: app.css
templates/: base.html
templates/registration/: login.html
