[project]
name = "repo"
version = "0.1.0"
description = "Parse/scrape content from various sources (YouTube, X, links) into searchable notes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core
    "django>=5.2,<6.0",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "python-dotenv>=1.0",
    "django-environ>=0.12",
    # Async tasks
    "celery[redis]>=5.4",
    "redis>=5.2",
    # Ingestion / parsing
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "trafilatura>=2.0",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.1.15",
    # AI summaries
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "django-debug-toolbar>=5.0",
    "pytest>=8.3",
    "pytest-django>=4.9",
]
# Optional: authenticated-browser scraping for X/Twitter. After installing,
# run `playwright install chromium` (or build the image with INSTALL_BROWSERS=1).
browser = [
    "playwright>=1.49",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--reuse-db -q"
