[project]
name = "repo"
version = "0.1.0"
description = "Parse/scrape content from various sources (YouTube, X, links) into searchable notes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core
    "django>=6.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "python-dotenv>=1.0",
    "django-environ>=0.12",
    # Async tasks
    "celery[redis]>=5.6.3",
    "redis>=5.2",
    # Ingestion / parsing
    "httpx>=0.28",
    "beautifulsoup4>=4.15.0",
    "trafilatura>=2.1.0",
    "youtube-transcript-api>=1.2",
    "yt-dlp>=2026.6.9",
    # AI summaries
    "anthropic>=0.109.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "django-debug-toolbar>=5.0",
    "pytest>=8.3",
    "pytest-django>=4.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--reuse-db -q"
